@@ -4,6 +4,7 @@ releases are sorted from youngest to oldest.
 version 5.0+mtv:
 - Molotov patches
 - Redis protocol via libhiredis
+- h264_metadata bitstream fixed_frame_rate_flag fix
 
 
 version 5.0:
